# common-api-someip-test-app

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  GLibCommonAPIFactory.h  TestInterface-someip.fdepl  TestInterface.fidl  TestService.h  TestTypes.fidl  log.h
src/client/: CMakeLists.txt  mainClient.cpp
src/service/: CMakeLists.txt  mainService.cpp  test-service.service.in  test-service.someip-service.in
